hphp/hack/test/typecheck/constmap.php.legacy.exp
File "constmap.php", line 14, characters 14-15:
Invalid argument (Typing[4110])
File "constmap.php", line 12, characters 30-37:
This is an array key (int/string)
File "constmap.php", line 12, characters 30-37:
Considering that this type argument is invariant with respect to ConstMap
File "constmap.php", line 13, characters 20-25:
It is incompatible with a string
File "collections/Map.hhi", line 57, characters 59-60:
  via this generic Tk
File "collections/interfaces.hhi", line 1126, characters 59-60:
  via this generic Tk
